--- a/charts/fernando/templates/deployment.yaml
+++ b/charts/fernando/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "facchin.fullname" . }}
+  name: {{ include "fernando.fullname" . }}
   labels:
-    {{- include "facchin.labels" . | nindent 4 }}
+    {{- include "fernando.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "facchin.selectorLabels" . | nindent 6 }}
+      {{- include "fernando.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,13 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "facchin.selectorLabels" . | nindent 8 }}
+        {{- include "fernando.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "facchin.serviceAccountName" . }}
+      serviceAccountName: {{ include "fernando.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
