--- a/charts/fernando/Chart.yaml
+++ b/charts/fernando/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: facchin
+name: fernando
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -23,4 +23,4 @@ version: 0.1.0
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
 
-icon: file://facchin.jpeg
+icon: file://fernando.jpeg
