--- a/charts/fernando/questions.yml
+++ b/charts/fernando/questions.yml
@@ -11,7 +11,7 @@ questions:
   group: "service and Load Balancing"
   subquestions:
   - variable: ingress.hosts[0].host
-    default: "facchin-questions.sebrae.jac.bsb.br"
+    default: "fernando-questions.sebrae.jac.bsb.br"
     description: "Hostname to your Nginx installation"
     type: hostname
     required: true
