--- a/charts/fernando/templates/service.yaml
+++ b/charts/fernando/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "facchin.fullname" . }}
+  name: {{ include "fernando.fullname" . }}
   labels:
-    {{- include "facchin.labels" . | nindent 4 }}
+    {{- include "fernando.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "facchin.selectorLabels" . | nindent 4 }}
+    {{- include "fernando.selectorLabels" . | nindent 4 }}
