--- a/charts/fernando/templates/serviceaccount.yaml
+++ b/charts/fernando/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "facchin.serviceAccountName" . }}
+  name: {{ include "fernando.serviceAccountName" . }}
   labels:
-    {{- include "facchin.labels" . | nindent 4 }}
+    {{- include "fernando.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
